--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,48 @@
-/* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+header{
+    background-image: url(assets/images/background.jpg);
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+}
+ul{
+    float: right;
+    list-style-type: none;
+    margin-top: 25px;
+}
+ul li{
+    display: inline-block;
+}
+ul li a{
+    text-decoration: none;
+    color: snow;
+    padding: 5px 30px;
+    transition: ease 0.5s;
+}
+ul li.active a{
+     background-color:seashell ;
+     color: black;
+}
+ul li a:hover{
+    background-color: seashell;
+    color: #000;
+}
+.logo img{
+    width: 150px;
+    height: auto;
+    float: left;
+}
+.button{
+    display: inline-block;
+    text-decoration: none;
+    color: firebrick;
+    padding: 10px 30px;
+    transition: ease 0.5s;
+    margin-top: 25px;
+    font-size: larger;
+}
+
