Header and Register

--- a/src/app/componenets/header/header.component.html
+++ b/src/app/componenets/header/header.component.html
@@ -1,17 +1,21 @@
-<header>
-    <div class="main">
-        <div class="logo">
-            <img src="../../../assets/images/logo.png">
+<div class="container-fluid">
+    <div class="row header">
+        <div class="col-1  my-auto">
+            <h2 style="font-weight: bold;margin-bottom: 0;">TalkitOut</h2>
         </div>
-        <ul>
-            <li class="active"><a href="index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="">CONTACT</a></li>
-            <li><a href="">LOGIN</a></li>
-            <li><a href="">SIGNUP</a></li>
-        </ul>
-        <div class="button">
-            <a href="#">Join a meeting</a>
+        <div class="col-2 my-auto d-flex justify-content-center">
+            <button class="btn-join">Join a Meeting</button>
+        </div>
+        <div class="col my-auto">
+            <nav class="list-inline my-auto" >
+                <ul class="nav justify-content-end">
+                    <li class=list-inline-item><a href="">Home</a></li>
+                    <li class=list-inline-item><a href="">About</a></li>
+                    <li class=list-inline-item><a href="">Contact</a></li>
+                    <li class=list-inline-item><a href="">Login</a></li>
+                    <a href="/register" class="btn-signup">Sign Up</a>
+                </ul>
+            </nav>
         </div>
     </div>
-</header>
+</div>
