--- a/src/app/componenets/register/register.component.html
+++ b/src/app/componenets/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row d-flex m-auto justify-content-center">
-        <div class="col-6 formbox">
+        <div class="col-5 formbox">
             <h2>Welcome to Talkitout!</h2>
             <h3>Register Now</h3>
             <form #regForm = "ngForm" (ngSubmit)="onSubmit(regForm)">
@@ -20,9 +20,15 @@
                     <input type="password" class="form-control" requried name="cnfpassword" [ngModel]="cnfpassword" placeholder="Confirm Password">
                     <label for="" class="label">Confirm Password</label>
                 </div>
-                <div class="">
-                    <div class="control"><button class="button" type="submit">Save</button></div>
-                </div>
+                <button class="btn-register" type="submit">
+                    <div>
+                        <svg width="20" height="23" viewBox="0 0 20 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M16.9506 16.3802C15.3783 15.5669 12.7849 14.5 10 14.5C7.21513 14.5 4.62175 15.5669 3.04942 16.3802C2.03431 16.9052 1.42295 17.9351 1.2883 19.07L1 21.5H19L18.7117 19.07C18.577 17.9351 17.9657 16.9052 16.9506 16.3802Z" stroke="#FCFCFC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M10 10C12.4853 10 14.5 7.98528 14.5 5.5C14.5 3.01472 12.4853 1 10 1C7.51472 1 5.5 3.01472 5.5 5.5C5.5 7.98528 7.51472 10 10 10Z" stroke="#FCFCFC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        Register
+                    </div>
+                </button>
             </form>
         </div>
         
