--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css);
 
+
+$primary: #610BEF;
+
 *{
     font-family: poppins;
 }
