--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -5,6 +5,18 @@
     background-color: #f7f7fc;
     justify-content: center;
     text-align: center;
+
+    .errors{
+        background-color: #ffecfc;
+        font-size: 14px;
+        text-align: left!important;
+        width: 325px;
+        margin:auto;
+        margin-bottom:30px;
+        color: #9E0038;
+        padding:8px;
+        border-radius: 10px;
+    }
     
     h2, h3{
         font-weight: bold;
@@ -21,12 +33,33 @@
         margin-bottom: 20px;
         height: 64px;
         align-self: center;
-        background-color: #EFF0F6;
+        border-radius: 16px;  
+          
+        &.invalid{
+            color: #9E0038;
+            input{
+                background-color: #ffecfc;
+                border: 2px solid #ca024f;
+            }
+        }
+        &.success{
+            color: #00966D;
+            input{
+                background-color: #EAF9DE ;
+                border:2px solid #008A00;
+            }
+        }
+
         input{
             height: 100%;
             width: 100%;
             border: none;
+            border-radius: 16px;
             background-color: #EFF0F6;
+            // &.invalid{
+            //     background-color: #ffecfc;
+            //     border: 2px solid #ca024f;
+            // }
         }   
     }
     .btn-register{
@@ -41,6 +74,8 @@
         font-size: 18px;
         font-weight: 600;
         letter-spacing: 0.75px;
-
+        &[disabled]{
+            background-color: #ac81f3;
+        }
     }
 }
