--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
             <h2 style="font-weight: bold;margin-bottom: 0;">TalkitOut</h2>
         </div>
         <div class="col-2 my-auto d-flex justify-content-center">
-            <button class="btn-join">Join a Meeting</button>
+            <button class="btn-join" *ngIf = "isLogged()">Join a Meeting</button>
         </div>
         <div class="col my-auto">
             <nav class="list-inline my-auto" >
@@ -12,8 +12,10 @@
                     <li class=list-inline-item><a href="">Home</a></li>
                     <li class=list-inline-item><a href="">About</a></li>
                     <li class=list-inline-item><a href="">Contact</a></li>
-                    <li class=list-inline-item><a href="">Login</a></li>
-                    <a href="/register" class="btn-signup">Sign Up</a>
+                    
+                    <li class=list-inline-item *ngIf = "!isLogged()"><a href="/login">Login</a></li>
+                    <a href="/register" class="btn-signup" *ngIf = "!isLogged()">Sign Up</a>
+                    <a class="btn-signup" *ngIf = "isLogged()" (click)="logout()">Logout</a>
                 </ul>
             </nav>
         </div>
