--- a/src/app/components/startmeeting/startmeeting.component.html
+++ b/src/app/components/startmeeting/startmeeting.component.html
@@ -2,7 +2,9 @@
     <div class="row d-flex m-auto justify-content-center">
         <div class="col-5 formbox">
             <h2>Start a New Meeting</h2>
-            <div class="video-preview"></div>
+            <div class="video-preview">
+                <video src="" id="vid-prev"></video>
+            </div>
             <div class="participant-name">Joining as <h4>John Doe</h4></div>
             <div class="media-control">
                 <button class="btn-media">Camera On</button>
