--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,18 +1,22 @@
 <div class="container-fluid">
-    <div class="row header">
-        <div class="col-1  my-auto">
-            <h2 style="font-weight: bold;margin-bottom: 0;">TalkitOut</h2>
+    <div class="row header justify-content-between">
+        <div class="col  my-auto">
+            <nav class="list-inline my-auto" >
+                <ul class="nav justify-content-start">
+                    <li class="list-inline-item" *ngIf = "isLogged()"><a href="/" class="logo"><img src="../../../assets/images/talkitout-icon.png" alt=""></a></li>
+                    <li class=list-inline-item><a href="">Home</a></li>
+                    <li class=list-inline-item><a href="">About</a></li>
+                    <li class=list-inline-item><a href="">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-        <div class="col-2 my-auto d-flex justify-content-center">
-            <button class="btn-join" *ngIf = "isLogged()">Join a Meeting</button>
+        <div class="col my-auto d-flex justify-content-center">
+            <img src="../../../assets/images/talkitout.svg" width="200px" alt="" *ngIf = "!isLogged()">
+            <button class="btn-join" *ngIf = "isLogged()" onclick="window.location='/joinmeeting'">Join a Meeting</button>
         </div>
         <div class="col my-auto">
             <nav class="list-inline my-auto" >
                 <ul class="nav justify-content-end">
-                    <li class=list-inline-item><a href="">Home</a></li>
-                    <li class=list-inline-item><a href="">About</a></li>
-                    <li class=list-inline-item><a href="">Contact</a></li>
-                    
                     <li class=list-inline-item *ngIf = "!isLogged()"><a href="/login">Login</a></li>
                     <a href="/register" class="btn-signup" *ngIf = "!isLogged()">Sign Up</a>
                     <a class="btn-signup" *ngIf = "isLogged()" (click)="logout()">Logout</a>
