--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -8,7 +8,7 @@
 
     .btn-join{
         height: 52px;
-        padding: 11px 22px 14px 22px;
+        padding: 12px 22px 13px 22px;
         border: 0px;
         border-radius: 12px;
         background-color: #610BEF;
@@ -26,7 +26,7 @@
 
     .btn-signup{
         height: 52px!important;
-        padding: 11px 22px 14px 22px;
+        padding: 9px 20px 12px 20px;
         border: 2px solid #610BEF;
         border-radius: 12px;
         color: #610BEF;
@@ -54,6 +54,7 @@
           justify-content: center;
           align-items: center;
 
+
           a{
             text-decoration: none;
             border-bottom: 0px solid transparent;
@@ -66,6 +67,9 @@
             &:hover{
               border-bottom: 4px solid #610BEF;
               transition: border-bottom 0.1s ease-out;
+            }
+            &.logo:hover{
+              border-bottom: 0px!important;
             }
           }
          
