--- a/src/app/components/resetpassword/resetpassword.component.scss
+++ b/src/app/components/resetpassword/resetpassword.component.scss
@@ -5,6 +5,31 @@
     background-color: #f7f7fc;
     justify-content: center;
     text-align: center;
+
+    .errors{
+        background-color: #ffecfc;
+        font-size: 14px;
+        text-align: left!important;
+        width: 325px;
+        margin:auto;
+        margin-bottom:30px;
+        color: #9E0038;
+        padding:8px;
+        border-radius: 10px;
+    }
+
+    .noerr{
+        background-color: #EAF9DE;
+        font-size: 14px;
+        text-align: left!important;
+        width: 325px;
+        margin:auto;
+        margin-bottom:30px;
+        color:#008A00;
+        padding:8px;
+        border-radius: 10px;
+
+    }
     
     h2, h3{
         font-weight: bold;
@@ -12,21 +37,6 @@
     }
     h3{
         margin-bottom: 45px;
-    }
-
-    .participant-name{
-        font-size: 24px;
-        margin-top: 10px;
-        h4{
-            display: inline;
-            font-weight: bold;
-        }
-    }
-
-    .media-control{
-        margin-top: 25px;
-        display: flex;
-        justify-content: space-around;
     }
 
     .field{
@@ -65,32 +75,11 @@
             // }
         }   
     }
-
-    .btn-media{
-        height: 52px;
-        border: 0px;
-        border-radius: 32px;
-        background-color: #EF0B42;
-        font-size: 16px;
-        font-weight: 600;
-        color: white;
-        letter-spacing: 0.75px;
-        padding: 0px 20px;
-    }
-   
-
-    .video-preview{
-        height: 240px;
-        width: 320px;
-        background-color: #c4c4c4;
-        margin: auto;
-        margin-top: 50px;
-    }
-
     .btn-register{
         margin-top: 45px;
         align-self: center;
-        padding: 0px 25px;
+        width: auto;
+        min-width: 185px;
         height: 72px;
         background-color: #610BEF;
         border-radius: 48px;
@@ -102,11 +91,6 @@
         &[disabled]{
             background-color: #ac81f3;
         }
+        padding: 0px 20px;
     }
-}
-#zmmtg-root{
-    display: none!important;
-}
-.label{
-    color:black!important;
 }
