--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-header></app-header>
+<app-header *ngIf="!hasRoute('/meeting')"></app-header>
 <router-outlet></router-outlet>
+<app-footer *ngIf="!hasRoute('/meeting')"></app-footer>
