--- a/src/app/components/startmeeting/startmeeting.component.scss
+++ b/src/app/components/startmeeting/startmeeting.component.scss
@@ -146,3 +146,15 @@
 .spinner{
     padding: 30px 0 0 0;
 }
+
+.errors{
+    background-color: #ffecfc;
+    font-size: 14px;
+    text-align: left!important;
+    width: 325px;
+    margin:auto;
+    margin-bottom:30px;
+    color: #9E0038;
+    padding:8px;
+    border-radius: 10px;
+}
